# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1386 2010-09-07 09:15:29 mb Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.0.0 beta3 ????-??-??
 - 2010-09-07 Fixed bug#5886 - Forwarding rich text tickets adds extra attachment.
 - 2010-09-07 Fixed bug#5885 - Forwarding an article adds string to subject.
 - 2010-09-07 Fixed bug#5024 - Adding a new ticket-priority results in a PriorityID-<new ID> tag
    from the layout engine in the generated HTML wo/ matching CSS class.
 - 2010-09-07 Fixed bug#5884 - For CSV and Print (PDF) search results the search window does not auto close.
 - 2010-09-06 Fixed bug#5887 - The size of the widget in the import statistic is too small for the input file.
 - 2010-09-06 Fixed bug#5877 - No screen refresh when linking tickets.
 - 2010-09-06 Fixed bug#4411 - CustomerTicket plain print (PDF=off) shows wrong URLs.
 - 2010-09-06 Fixed bug#3521 - Error messages from password regex rules are
    truncated at comma which should't be there.
 - 2010-09-06 Fixed bug#5875 - Customer ticket print view has too much information.
 - 2010-09-06 Fixed bug#5867 - Navigation bar does not obey click path.
 - 2010-09-06 Fixed bug#5871 - Ticket information in dashboard is not properly aligned.
 - 2010-09-06 Fixed bug#5876 - Chinese UI issue.
 - 2010-09-03 Fixed bug#5873 - Permissions fields are displaced in the EditSpecification of a Stat.
 - 2010-09-03 Fixed bug#5812 - Customer Interface Password Sent dialog could be less confusing.
 - 2010-09-03 Fixed bug#5870 - Login boxes in Customer Interface are too small.
 - 2010-09-03 Fixed bug#5811 - Customer Interface account creation error handling
    does not work correctly.
 - 2010-09-03 Fixed bug#5632 - New Ticket Search Dialog takes about 3 Seconds to load, 3 seconds