@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <otrs_config version="1.0" init="Application">
-    <CVS>$Id: Ticket.xml,v 1.380 2010-09-03 14:13:11 mb Exp $</CVS>
+    <CVS>$Id: Ticket.xml,v 1.381 2010-09-07 12:22:34 mg Exp $</CVS>
     <ConfigItem Name="Ticket::Hook" Required="1" Valid="1">
         <Description Translatable="1">The identifier for a ticket, e.g. Ticket#, Call#, MyTicket#. The default is Ticket#.</Description>
         <Group>Ticket</Group>
@@ -6390,7 +6390,7 @@ $QData{"Signature"}
                 <Item Key="Block">ContentSmall</Item>
                 <Item Key="Group"></Item>
                 <Item Key="Default">1</Item>
-                <Item Key="CacheTTL">0</Item>
+                <Item Key="CacheTTL">30</Item>
             </Hash>
         </Setting>
     </ConfigItem>
